# retina-5

./: .gitignore  CMakeLists.txt  Data.h  ExecuteRetina.cpp  Makefile  Physics.cpp  Physics.h  README.md  Retina.cpp  Retina.h  Tools.cpp  Tools.h  cpuRetina.cpp  cpuRetina.h  gpuRetina.cu  gpuRetina.cuh  grid.cpp  grid.h  physics.cpp  physics.h
RetinaCore/: CMakeLists.txt  Definitions.cuh  GpuRetina.cu  GpuRetina.cuh
algorithms/: GpuRetina.cu  GpuRetina.cuh  HitsFinders.h  Physics.cpp  Physics.h  Retina.cpp  Retina.h
cmt/: requirements
optimizations/: ClimbingHillOptimization.h  Grid.cpp  Grid.h  GridOptimization.h  IOptimization.h
src/: CMakeLists.txt  ExecuteRetina.cpp  ExecuteRetina.h  PrPixelCudaHandler.cpp  Tools.cpp  Tools.h
src/RetinaCore/: CMakeLists.txt  CpuRetina.h  GpuRetina.cu  GpuRetina.cuh
src/algorithms/: HitsFinders.h  Physics.cpp  Retina.cpp  Retina.h
src/optimizations/: Grid.cpp  Grid.h  GridOptimization.h  IOptimization.h
test/: CMakeLists.txt  GpuTest.cpp  GridTest.cpp  ToolsTest.cpp
